crates/runmat-macros/tests/ui/fail_bad_sig.stderr
error[E0277]: the `?` operator can only be applied to values that implement `Try`
 --> tests/ui/fail_bad_sig.rs:3:1
  |
3 | #[runtime_builtin(name = "oops")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the `?` operator cannot be applied to type `i32`
  |
  = help: the trait `Try` is not implemented for `i32`
